--- a/package.json
+++ b/package.json
@@ -1,25 +1,34 @@
 {
-  "name": "project-2-spa",
+  "name": "spa-relax",
   "version": "1.0.0",
-  "description": "SPA Relax app that allows users to schedule appointment for massage and facial services.",
+  "description": "#### Project 2-Spa-Repo, 2/20/2020",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Monika933/Project-2-Spa.git"
-  },
-  "author": "",
+  "keywords": [
+    "Spa"
+  ],
+  "author": "Filip, Monika, Tina",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Monika933/Project-2-Spa/issues"
-  },
-  "homepage": "https://github.com/Monika933/Project-2-Spa#readme",
   "dependencies": {
-    "express": "^4.17.1",
-    "mysql2": "^2.1.0",
-    "sequelize": "^5.21.5"
+    "animejs": "^2.2.0",
+    "body-parser": "^1.18.2",
+    "bootstrap": "^4.0.0",
+    "dotenv": "^5.0.1",
+    "ejs": "^2.5.7",
+    "express": "^4.16.3",
+    "express-handlebars": "^3.0.0",
+    "jade": "^1.11.0",
+    "materialize-css": "^0.100.2",
+    "multer": "^1.3.0",
+    "mysql": "^2.15.0",
+    "mysql2": "^1.5.2",
+    "nodemon": "^1.17.2",
+    "react-anime": "^2.1.0",
+    "sequelize": "^4.44.4",
+    "sequelizer": "^1.1.4",
+    "swiper": "^4.1.6"
   }
 }
